actually remove nodeName() fixed overflow on large details

--- a/standalone/css/mashup.css
+++ b/standalone/css/mashup.css
@@ -51,6 +51,7 @@ html, body {
     left: 80%;
     height: 50%;
     width: 19%;
+    overflow: scroll;
 }
 
 #relevantArtifacts {
